# OTA-Project

./: README.md  copy-image-to-qnx.sh
QNX-App/: CMakeLists.txt  vsomeip-client.json
QNX-App/src/: OTAClient.cpp  OTAClient.hpp  main_client.cpp
QNX-Image/: data_files.custom.vsomeip  post_start.custom  profile.custom  run-ota-client.sh
meta-project/conf/: layer.conf
meta-project/conf/distro/: project-distro.conf
meta-project/recipes-bsp/rpi-config/: rpi-config_%.bbappend
meta-project/recipes-connectivity/commonapi/: commonapi-core_3.2.4.bb  commonapi-someip_3.2.4.bb
meta-project/recipes-connectivity/network-config/: network-config.bb
meta-project/recipes-connectivity/network-config/files/: eth0.network
meta-project/recipes-connectivity/vsomeip/: vsomeip_3.4.10.bb
meta-project/recipes-connectivity/vsomeip/files/: disable-tests.patch
meta-project/recipes-core/images/: project-image.bb
meta-project/recipes-ota/ota-client-ui/: ota-client-ui.bb
meta-project/recipes-ota/ota-client-ui/files/: CMakeLists.txt  Main.qml  OTAClientController.cpp  OTAClientController.h  ReceivingView.qml  ResultView.qml  WaitingView.qml  main.cpp  qt_app.service  vsomeip-client.json
meta-project/recipes-ota/ota-client-ui/files/src-gen/v1/com/ota/: FlashManager.cpp  OTAFlashServiceProxyBase.hpp  OTAFlashServiceSomeIPDeployment.cpp  OTAFlashServiceStub.hpp  OTAFlashServiceStubImpl.cpp  main.cpp
meta-project/recipes-ota/ota-flash-initscript/: ota-flash-initscript.bb
meta-project/recipes-ota/ota-flash-initscript/files/: ota-flash.service
meta-project/recipes-ota/ota-flash-service/: ota-flash-service.bb
meta-project/recipes-ota/ota-flash-service/files/: CMakeLists.txt
meta-project/recipes-ota/ota-flash-service/files/config/: vsomeip-ota.json
meta-project/recipes-ota/ota-flash-service/files/fidl/: OTAFlash.fdepl  OTAFlash.fidl
meta-project/recipes-ota/ota-flash-service/files/src-gen/v1/com/ota/: FlashManager.cpp  FlashManager.hpp  OTAFlashService.hpp  OTAFlashServiceProxy.hpp  OTAFlashServiceSomeIPCatalog.json  OTAFlashServiceSomeIPDeployment.hpp  OTAFlashServiceSomeIPProxy.cpp  OTAFlashServiceSomeIPProxy.hpp  OTAFlashServiceSomeIPStubAdapter.cpp  OTAFlashServiceSomeIPStubAdapter.hpp  OTAFlashServiceStubDefault.hpp  (+2 more)
meta-project/recipes-qt/qtbase/: qtbase_%.bbappend
